# scion

./: MODULE.bazel  freestanding_topo.sh  go.mod  go.sum  triangle_topo.sh
daemon/: BUILD.bazel  daemon.go
daemon/cmd/daemon/: BUILD.bazel  main.go
daemon/drkey/grpc/: fetching_test.go
daemon/grpc/: server.go
daemon/internal/servers/: BUILD.bazel  backend.go  engine.go  grpc.go  standalone.go
demo/drkey/: main.go
doc/command/scion/: scion_address.rst  scion_ping.rst  scion_showpaths.rst  scion_traceroute.rst
doc/command/scion-pki/: scion-pki_certificate_renew.rst
lab-autogen-freestanding/: lab.conf  scion01.startup
lab-autogen-triangle/: lab.conf  scion01.startup  scion02.startup  scion03.startup
pkg/daemon/: BUILD.bazel  apitypes.go  auto.go  backend.go  backend_metrics.go  connector.go  connector_metrics.go  daemon.go  default.go  doc.go  engine.go  grpc.go  standalone.go  standalone_darwin.go  standalone_unix.go  standalone_windows.go  topology.go  trust.go
pkg/daemon/asinfo/: BUILD.bazel  asinfo.go
pkg/daemon/client/: BUILD.bazel  README.md  default.go  default_test.go  localdaemon.go
pkg/daemon/fetcher/: fetcher.go
pkg/daemon/impl/: backend.go  metrics.go
pkg/daemon/mock_daemon/: mock.go
pkg/daemon/server/: backend.go
private/app/flag/: env.go  env_test.go
private/bootstrap/: BUILD.bazel  README.md  bootstrapper.go  bootstrapper_test.go  dns_helper.go
private/drkey/grpc/: fetching_test.go
private/segment/segfetcher/: splitter.go
scion-pki/certs/: renew.go
scion/cmd/scion/: ping.go  (+4 more)
topology/: freestanding.topo  triangle.topo
(+7 files in other folders)
