load("@rules_go//go:def.bzl", "go_library")
load("//tools:go.bzl", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bootstrapper.go",
        "dns_helper.go",
    ],
    importpath = "github.com/scionproto/scion/private/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//private/topology:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bootstrapper_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
